[package]
name = "rssust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.150"
anyhow = "1.0.103"
threadpool = "1.8"
tokio = { version = "1.0", features = ["rt"] }
obscura = { git = "https://github.com/h4ckf0r0day/obscura" }
reqwest = "0.13.4"
scraper = "0.18"
rss = "2.1.0"
chrono = "0.4.45"


[profile.dev]
incremental = true
