[package]
name = "rssust"
version = "0.0.1"
edition = "2024"

[dependencies]
serde_json = "1.0.150"
anyhow = "1.0.103"
threadpool = "1.8"
tokio = { version = "1.0", features = ["rt"] }
obscura = { git = "https://github.com/h4ckf0r0day/obscura" }
reqwest = { version = "0.13.4", features = ["cookies", "blocking", "form"] }
scraper = "0.27.0"
rss = "2.1.0"
chrono = "0.4.45"
regex = "1.12.4"
mdbook = "0.4" 
md-5 = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2.1"
bench_scraper = "0.4.1"

[profile.dev]
incremental = true
